[package]
name = "proxy-filter"
version = "0.1.1"
authors = ["Lim Li Khia <lilim@redhat.com>"]
edition = "2018"

[features]
wee-alloc = ["wee_alloc"]

[dependencies]
proxy-wasm = "0.1.3"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
